--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,15 +22,15 @@ services:
       - database
     environment:
       - APP_ENV=${APP_ENV}
-      - DATABASE_URL=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@database:3306/${DATABASE_NAME}?serverVersion=5.7
+      - DATABASE_URL=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@database:3306/${DATABASE_NAME}?serverVersion=mariadb-10.4.12
     volumes:
-      - ../src:/var/www
+      - ./src:/var/www
 
   nginx:
     build:
       context: ./nginx
     volumes:
-      - ../src:/var/www
+      - ./src:/var/www
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/sites/:/etc/nginx/sites-available
       - ./nginx/conf.d/:/etc/nginx/conf.d
